--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 #es-sanofi.es-sanofi .es-benefits__pic {
   background-color: #52338c;
   border-radius: 15px;
-  height: 130px;
+  height: 140px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #es-sanofi.es-sanofi .es-benefits__single {
-  width: 130px;
+  width: 140px;
 }
 
 #es-sanofi.es-sanofi .es-benefits__txt {
@@ -142,7 +142,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 }
 
 #es-sanofi.es-sanofi .es-benefits__img {
-  max-width: 60%;
+  max-width: 50%;
   display: block;
   margin: 0 auto;
 }
@@ -301,7 +301,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   max-width: 100%;
   display: block;
   margin: 0 auto;
-  width: 99px;
+  width: 77px;
 }
 
 #es-sanofi.es-sanofi .es-reasons__content {
@@ -316,14 +316,14 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 #es-sanofi.es-sanofi .es-reasons__pic {
   background-color: #6a55a5;
   border-radius: 15px;
-  height: 130px;
+  height: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #es-sanofi.es-sanofi .es-reasons__single {
-  width: 130px;
+  width: 150px;
 }
 
 #es-sanofi.es-sanofi .es-reasons__txt {
@@ -580,8 +580,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   padding: 0;
   line-height: inherit;
   color: #52338c;
-  font-family: inherit;
-  font-weight: 700;
+  font-family: "MontserratBold", sans-serif;
   font-size: 13px;
   text-align: center;
   white-space: nowrap;
@@ -801,7 +800,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 }
 
 #es-sanofi.es-sanofi .es-info__img {
-  max-width: 100%;
+  max-width: 90%;
   display: block;
   margin: 0 auto;
 }
@@ -867,6 +866,10 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   font-style: normal;
 }
 
+#es-sanofi.es-sanofi .es-wrapper {
+  padding: 0 16px;
+}
+
 @media (min-width: 404px) {
   #es-sanofi.es-sanofi .es-cross__title {
     max-width: 404px;
@@ -889,16 +892,16 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
     left: 11%;
   }
   #es-sanofi.es-sanofi .es-benefits__pic {
-    height: 150px;
+    height: 170px;
   }
   #es-sanofi.es-sanofi .es-benefits__single {
-    width: 150px;
+    width: 170px;
   }
   #es-sanofi.es-sanofi .es-reasons__pic {
-    height: 150px;
+    height: 170px;
   }
   #es-sanofi.es-sanofi .es-reasons__single {
-    width: 150px;
+    width: 170px;
   }
 }
 
@@ -1025,9 +1028,6 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   #es-sanofi.es-sanofi .es-cross__btn {
     font-size: 18px;
   }
-  #es-sanofi.es-sanofi .es-cross__txt {
-    font-size: 15px;
-  }
   #es-sanofi.es-sanofi .es-info__title {
     font-size: 32px;
     max-width: 600px;
@@ -1149,6 +1149,9 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   width: 47%;
 }
 #es-sanofi.es-sanofi .es-cross__signature {
+  font-size: 15px;
+}
+#es-sanofi.es-sanofi .es-cross__txt {
   font-size: 15px;
 }
 #es-sanofi.es-sanofi .es-cross__header {
@@ -1730,7 +1733,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
                 bolesnym parciem na mocz. Leczenie wspomagające w&nbsp;stanach skurczowych mięśni gładkich przewodu pokarmowego, chorobie wrzodowej żołądka 
                 i&nbsp;dwunastnicy, zapaleniu żołądka, zapaleniu jelit, zapaleniu okrężnicy, stanach skurczowych wpustu i&nbsp;odźwiernika żołądka, zespole jelita drażliwego, 
                 zaparciach na tle spastycznym i&nbsp;wzdęciach jelit, zapaleniu trzustki; w&nbsp;bolesnym miesiączkowaniu. 
-                Podmiot odpowiedzialny: Opella Healthcare Commercial Ltd., Węgry, grupa Sanofi {ChPL 01/2023}
+                Podmiot odpowiedzialny: Opella Healthcare Commercial Ltd., Węgry, grupa Sanofi <br /> <i>{ChPL 01/2023}</i>
             </div>
             <div class="es-footer__warning">
                 To jest lek. Dla bezpieczeństwa stosuj go zgodnie z&nbsp;ulotką dołączoną do opakowania. 
