--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 #es-sanofi.es-sanofi .es-benefits__pic {
   background-color: #52338c;
   border-radius: 15px;
-  height: 140px;
+  aspect-ratio: 1/1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #es-sanofi.es-sanofi .es-benefits__single {
-  width: 140px;
+  width: 46%;
 }
 
 #es-sanofi.es-sanofi .es-benefits__txt {
@@ -316,14 +316,14 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 #es-sanofi.es-sanofi .es-reasons__pic {
   background-color: #6a55a5;
   border-radius: 15px;
-  height: 150px;
+  aspect-ratio: 1/1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #es-sanofi.es-sanofi .es-reasons__single {
-  width: 150px;
+  width: 46%;
 }
 
 #es-sanofi.es-sanofi .es-reasons__txt {
