--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   font-family: "MontserratBold", sans-serif;
   font-size: 16px;
   position: absolute;
-  bottom: 33%;
+  top: 40%;
   left: 11%;
   opacity: 0;
   transition: all 1s ease-in;
@@ -888,8 +888,6 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   }
   #es-sanofi.es-sanofi .es-effect__name {
     font-size: 20px;
-    bottom: 36%;
-    left: 11%;
   }
   #es-sanofi.es-sanofi .es-benefits__pic {
     height: 170px;
@@ -973,7 +971,6 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   }
   #es-sanofi.es-sanofi .es-effect__name {
     font-size: 28px;
-    bottom: 38%;
     left: 22%;
   }
   #es-sanofi.es-sanofi .es-package__title {
