--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fff;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 20px;
   text-transform: uppercase;
   text-shadow: 0 0 5px #52338c;
@@ -65,6 +66,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fff;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 11px;
   text-transform: uppercase;
   text-shadow: 0 0 5px #52338c;
@@ -117,6 +119,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 
 #es-sanofi.es-sanofi .es-benefits__txt {
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   margin: 0;
   padding: 0;
   line-height: inherit;
@@ -157,6 +160,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 
 #es-sanofi.es-sanofi .es-package__title {
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   margin: 0;
   padding: 24px 0;
   line-height: inherit;
@@ -174,6 +178,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fdc200;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 18px;
   text-transform: uppercase;
   text-align: center;
@@ -206,6 +211,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 
 #es-sanofi.es-sanofi .es-treatment__title {
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   margin: 0;
   padding: 24px 0;
   line-height: inherit;
@@ -247,6 +253,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 
 #es-sanofi.es-sanofi .es-treatment__txt--span {
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
 }
 
 #es-sanofi.es-sanofi .es-treatment__content {
@@ -313,6 +320,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 
 #es-sanofi.es-sanofi .es-reasons__title {
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   margin: 0;
   padding: 24px 0;
   line-height: inherit;
@@ -359,6 +367,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fff;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 13px;
   padding-top: 8px;
 }
@@ -373,6 +382,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fdc200;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 22px;
   text-transform: uppercase;
   text-align: center;
@@ -430,6 +440,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #52338c;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 22px;
   text-transform: uppercase;
   text-align: center;
@@ -456,6 +467,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fdc200;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 18px;
   padding-top: 16px;
   padding-bottom: 8px;
@@ -484,6 +496,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #52338c;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 22px;
   text-transform: uppercase;
   text-align: center;
@@ -518,6 +531,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fdc200;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 18px;
   padding-top: 23px;
   text-align: center;
@@ -559,6 +573,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fff;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 22px;
   text-transform: uppercase;
   text-align: center;
@@ -579,6 +594,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #52338c;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 22px;
   text-transform: uppercase;
   text-align: center;
@@ -609,6 +625,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #52338c;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 13px;
   text-align: center;
   white-space: nowrap;
@@ -672,6 +689,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: inherit;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 18px;
   padding-top: 8px;
 }
@@ -679,6 +697,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 #es-sanofi.es-sanofi .es-cross__btn {
   line-height: inherit;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: inherit;
   display: flex;
   justify-content: center;
@@ -726,6 +745,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fff;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 11px;
   background-color: #d32833;
   margin-bottom: 8px;
@@ -749,6 +769,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fff;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 22px;
   text-transform: uppercase;
   text-align: center;
@@ -781,6 +802,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: inherit;
   color: #fdc200;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 13px;
   text-align: center;
   margin-inline: auto;
@@ -790,6 +812,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
 #es-sanofi.es-sanofi .es-info__btn {
   line-height: inherit;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 18px;
   display: flex;
   justify-content: center;
@@ -861,6 +884,7 @@ src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
   line-height: 1.4;
   color: #52338c;
   font-family: "MontserratBold", sans-serif;
+  font-weight: 700;
   font-size: 22px;
 }
 
